plf/src/snapshot_tests/snapshots/plf__snapshot_tests__compiler__compiler_blocks@in_extend.txt.snap
---
source: plf/src/snapshot_tests/compiler.rs
expression: s
input_file: plf/src/snapshot_tests/compiler_inputs/blocks/in_extend.txt
---
=== in_extend.txt ===
0000 RenderBlock("content")


>> Block: content
=== in_extend.txt ===
0000 WriteText("\n1. ")
0001 RenderBlock("nested")
0002 WriteText("\n")
---
>> Block: nested
=== in_extend.txt ===
0000 WriteText("A")
---
