plf/src/snapshot_tests/snapshots/plf__snapshot_tests__compiler__compiler_blocks@super.txt.snap
---
source: plf/src/snapshot_tests/compiler.rs
expression: s
input_file: plf/src/snapshot_tests/compiler_inputs/blocks/super.txt
---
=== super.txt ===
0000 RenderBlock("content")


>> Block: content
=== super.txt ===
0000 BuildMap(0)
0001 CallFunction("super")
0002 WriteTop
0003 WriteText(" - My site")
---
