plf/src/snapshot_tests/snapshots/plf__snapshot_tests__compiler__compiler_ok@basic.txt.snap
---
source: plf/src/snapshot_tests/compiler.rs
expression: compiler.chunk
input_file: plf/src/snapshot_tests/compiler_inputs/success/basic.txt
---
=== basic.txt ===
0000 WriteText("Hello ")
0001 LoadConst(I64(1))
0002 LoadConst(I64(10))
0003 LoadName("a")
0004 Mul
0005 Plus
0006 WriteTop
