plf/src/snapshot_tests/snapshots/plf__snapshot_tests__compiler__compiler_ok@block_set.txt.snap
---
source: plf/src/snapshot_tests/compiler.rs
expression: compiler.chunk
input_file: plf/src/snapshot_tests/compiler_inputs/success/block_set.txt
---
=== block_set.txt ===
0000 Capture
0001 WriteText("\nHello ")
0002 LoadName("world")
0003 WriteTop
0004 WriteText("\n")
0005 EndCapture
0006 BuildMap(0)
0007 ApplyFilter("upper")
0008 LoadConst(String("lang"))
0009 LoadConst(String("fr"))
0010 BuildMap(1)
0011 ApplyFilter("trans")
0012 Set("hero")
