plf/src/snapshot_tests/snapshots/plf__snapshot_tests__compiler__compiler_ok@component_call_body.txt.snap
---
source: plf/src/snapshot_tests/compiler.rs
expression: compiler.chunk
input_file: plf/src/snapshot_tests/compiler_inputs/success/component_call_body.txt
---
=== component_call_body.txt ===
0000 Capture
0001 WriteText("\nHello world.\n")
0002 EndCapture
0003 BuildMap(0)
0004 RenderBodyComponent("footer")
0005 WriteTop
