plf/src/snapshot_tests/snapshots/plf__snapshot_tests__compiler__compiler_ok@filter_section.txt.snap
---
source: plf/src/snapshot_tests/compiler.rs
expression: compiler.chunk
input_file: plf/src/snapshot_tests/compiler_inputs/success/filter_section.txt
---
=== filter_section.txt ===
0000 Capture
0001 WriteText("\nHello ")
0002 LoadName("world")
0003 WriteTop
0004 WriteText("\n")
0005 EndCapture
0006 LoadConst(String("lang"))
0007 LoadConst(String("fr"))
0008 BuildMap(1)
0009 ApplyFilter("capitalize")
0010 WriteTop
