plf/src/snapshot_tests/snapshots/plf__snapshot_tests__compiler__compiler_ok@for_else.txt.snap
---
source: plf/src/snapshot_tests/compiler.rs
expression: compiler.chunk
input_file: plf/src/snapshot_tests/compiler_inputs/success/for_else.txt
---
=== for_else.txt ===
0000 LoadName("items")
0001 StartIterate(false)
0002 StoreLocal("i")
0003 Iterate(7)
0004 LoadName("i")
0005 WriteTop
0006 Jump(3)
0007 StoreDidNotIterate
0008 PopLoop
0009 PopJumpIfFalse(11)
0010 WriteText("Empty")
